# hello-tauri-vite

./: .gitignore  README.md  package.json  pnpm-lock.yaml  shell.nix  tsconfig.json
scripts/: build-tauri-vite.ts  clean.sh  start-tauri-vite.ts  vite-config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-vite/: index.html  index.ts
